@@ -75,4 +75,7 @@ std::ostream& operator<<(std::ostream& stream, const preproc_map::value_type& de
 std::istream *preprocess_file(std::string const &fname,
                               preproc_map *defines = NULL, std::string *error_log=NULL);
 
+void preprocess_resource(const std::string res_name, preproc_map *defines_map,
+			bool write_cfg=false, bool write_plain_cfg=false, std::string target_directory="");
+
 #endif
